Update MX setting

--- a/ATS230704_R1.ioc
+++ b/ATS230704_R1.ioc
@@ -290,13 +290,13 @@ MotorControl.HWV_OCP=OnPowerStageOCP
 MotorControl.HWV_PWM=DrivingHighAndLowSides
 MotorControl.HW_COMPLEMENTED_LOW_SIDE=false
 MotorControl.HW_DEAD_TIME_NS=8000
-MotorControl.IPParameters=ADC_AHBPERIPH,ADC_CLOCK_WB_DIV,ADC_PERIPH,ADC_REFERENCE_VOLTAGE,BOARD,BUS_VOLTAGE_READING,CCMRAM_ENABLED,CLOCK_FREQUENCY,CLOCK_SOURCE,CPU_CLK_170_MHZ,CTLBOARD_NAME,CUBE_MX_VER,CURR_SAMPLING_TIME,CURRENT_READING_TOPOLOGY,DBG_MCU_LOAD_MEASURE,DEBUG_DAC_FUNCTIONALITY_EN,DISSIPATIVE_BRAKE_POLARITY,DRIVE_NUMBER,DRIVE_TYPE,DRIVES_NUMBER_SELECTION,EMERGENCY_STOP_GPIO_PIN,EMERGENCY_STOP_GPIO_PORT,ENCODER_AVAILABLE,ENCODER_PPR,EXT_CLK_8_MHZ,EXT_CLOCK_FREQUENCY,FEEDBACK_NET_FILTERING,HALL_SENSORS_AVAILABLE,HIGH_SIDE_IDLE_STATE,HW_COMPLEMENTED_LOW_SIDE,HW_DEAD_TIME_NS,HWV_CS,HWV_OCP,HWV_PWM,IPs,LOW_MEMORY_FOOTPRINT_REG,LOW_SIDE_IDLE_STATE,LOW_SIDE_SIGNALS_ENABLING,M1_AMPLIFICATION_GAIN,M1_ANGC,M1_AUXILIARY_SPEED_SENSOR,M1_BEMF_CONSISTENCY_GAIN,M1_BEMF_CONSISTENCY_TOL,M1_BOARD_MAX_CURRENT,M1_BUS_VOLTAGE_READING,M1_CONSTANT1_D,M1_CONSTANT1_Q,M1_CONSTANT2_QD,M1_CS_ADC_NUM,M1_CS_ADC_PHASE_SHARED,M1_CS_ADC_U,M1_CS_CHANNEL_U,M1_CURR_SAMPLING_TIME,M1_CURRENT_AMPLIFICATION_TOPO,M1_CURRENT_SENSING_TOPO,M1_DBG_OPEN_LOOP_ENABLE,M1_DC_CURRENT_RS_MEAS,M1_DEFAULT_CONTROL_MODE,M1_DEFAULT_FLUX_COMPONENT,M1_DEFAULT_TARGET_SPEED_RPM,M1_DEFAULT_TORQUE_COMPONENT,M1_DISCONTINUOUS_PWM,M1_DISSIPATIVE_BRAKE_POLARITY,M1_DP_TOPOLOGY,M1_DRIVE_TYPE,M1_ENABLE_SL_ALGO_FROM_PHASE,M1_ENCODER_PPR,M1_F1,M1_F2,M1_FEED_FORWARD_CURRENT_REG_ENABLING,M1_FLUX_WEAKENING_ENABLING,M1_FW_KI_GAIN,M1_FW_KIDIV,M1_FW_KP_GAIN,M1_FW_KPDIV,M1_FW_VOLTAGE_REF,M1_GAIN1,M1_GAIN2,M1_HALL_PHASE_SHIFT,M1_HALL_SENSORS_PLACEMENT,M1_HIGH_SIDE_IDLE_STATE,M1_HW_DEAD_TIME_NS,M1_ICL_ENABLED,M1_ID_DEMAG,M1_IQMAX,M1_LDLQ_RATIO,M1_LOW_SIDE_IDLE_STATE,M1_LOW_SIDE_SIGNALS_ENABLING,M1_LS,M1_MAX_APPLICATION_SPEED,M1_MAX_MODULATION_INDEX,M1_MIN_APPLICATION_SPEED,M1_MOTOR_MAX_SPEED_RPM,M1_MOTOR_NAME,M1_MOTOR_RATED_FLUX,M1_MOTOR_VOLTAGE_CONSTANT,M1_MTPA_ENABLING,M1_NB_CONSECUTIVE_TESTS,M1_NOMINAL_BUS_VOLTAGE_V,M1_NOMINAL_CURRENT,M1_OBS_MINIMUM_SPEED_RPM,M1_OCP_BKIN_FILTER,M1_OCP_BKIN_MODE,M1_OCP_BKIN_POLARITY,M1_OCP_DESTINATION,M1_OCP_TOPOLOGY,M1_OFST,M1_OV_VOLTAGE_PROT_ENABLING,M1_OVERMODULATION,M1_OVP_THRESHOLD_LOW,M1_PHASE1_DURATION,M1_PHASE1_FINAL_CURRENT,M1_PHASE1_FINAL_SPEED_RPM,M1_PHASE2_DURATION,M1_PHASE2_FINAL_CURRENT,M1_PHASE2_FINAL_SPEED_RPM,M1_PHASE3_DURATION,M1_PHASE3_FINAL_CURRENT,M1_PHASE3_FINAL_SPEED_RPM,M1_PHASE4_DURATION,M1_PHASE4_FINAL_CURRENT,M1_PHASE4_FINAL_SPEED_RPM,M1_PHASE5_DURATION,M1_PHASE5_FINAL_CURRENT,M1_PHASE5_FINAL_SPEED_RPM,M1_PID_FLUX_KD_DEFAULT,M1_PID_FLUX_KI_DEFAULT,M1_PID_FLUX_KP_DEFAULT,M1_PID_SPEED_KD_DEFAULT,M1_PID_SPEED_KI_DEFAULT,M1_PID_SPEED_KP_DEFAULT,M1_PID_TORQUE_KD_DEFAULT,M1_PID_TORQUE_KI_DEFAULT,M1_PID_TORQUE_KP_DEFAULT,M1_PLL_KI_GAIN,M1_PLL_KP_GAIN,M1_POLE_PAIR_NUM,M1_POSITION_CTRL_ENABLING,M1_POTENTIOMETER_ENABLE,M1_POWERBOARD_NAME,M1_PWM_CHARGE_BOOT_CAP_DUTY_CYCLES,M1_PWM_CHARGE_BOOT_CAP_MS,M1_PWM_DRIVER_PN,M1_PWM_FREQUENCY,M1_PWM_TIMER_BRK_IRQ,M1_PWM_TIMER_SELECTION,M1_PWM_TIMER_UP_IRQ,M1_REGULATION_EXECUTION_RATE,M1_RS,M1_RSHUNT,M1_SEGDIV,M1_SHARED_SIGNAL_ENABLE,M1_SP_KDDIV,M1_SP_KIDIV,M1_SP_KPDIV,M1_SPD_DIFFERENTIAL_TERM_ENABLING,M1_SPEED_BAND_LOWER_LIMIT,M1_SPEED_BAND_UPPER_LIMIT,M1_SPEED_FEEDBACK_CHECK,M1_SPEED_LOOP_FREQUENCY_HZ,M1_SPEED_SENSOR,M1_SS_MEAS_ERRORS_BEFORE_FAULTS,M1_STARTING_ANGLE_DEG,M1_STO_FIFO_DEPTH_01HZ,M1_STO_FIFO_DEPTH_DPP,M1_SW_DEADTIME_NS,M1_TEMPERATURE_READING,M1_TF_KDDIV,M1_TF_KIDIV,M1_TF_KPDIV,M1_TNOISE_NS,M1_TRANSITION_DURATION,M1_TRISE_NS,M1_USE_INTERNAL_OPAMP,M1_UV_VOLTAGE_PROT_ENABLING,M1_VARIANCE_THRESHOLD,M1_VBUS_ADC,M1_VBUS_ADC_SAMPLING_TIME,M1_VBUS_CHANNEL,M1_VBUS_PARTITIONING_FACTOR,MAX_READABLE_CURRENT,MC_WORKBENCH_VERSION,MCP_ASPEP_OVER_UART,MCP_ASYNC_EN,MCP_ASYNC_OVER_ASPEP_EN,MCP_ASYNC_OVER_UART_A_EN,MCP_DMA_RX_UART_A,MCP_DMA_TX_UART_A,MCP_DMACH_RX_UART_A,MCP_DMACH_TX_UART_A,MCP_EN,MCP_IRQ_HANDLER_DMA_RX_UART_A,MCP_IRQ_HANDLER_UART_A,MCP_OVER_ASPEP_EN,MCP_OVER_STLNK_EN,MCP_OVER_UART_A_EN,MCP_OVER_UART_B_EN,MCP_RX_SYNC_PAYLOAD_MAX,MCP_TX_SYNC_PAYLOAD_MAX,MCU,MCU_FAMILY,MCU_LINE,MCU_NAME,MCU_PACKAGE,MCU_TYPE,MCU_USERNAME,MOTOR_PROFILER,MOTOR_TYPE,OV_VOLTAGE_PROT_ENABLING,PHASE_CURRENTS_ADC,PHASE_CURRENTS_CHANNEL,PHASE_CURRENTS_GPIO_PIN,PHASE_CURRENTS_GPIO_PORT,PHASE_UH_GPIO_PIN,PHASE_UH_GPIO_PORT,PHASE_UH_POLARITY,PHASE_UL_GPIO_PIN,PHASE_UL_GPIO_PORT,PHASE_UL_POLARITY,PHASE_VH_GPIO_PIN,PHASE_VH_GPIO_PORT,PHASE_VH_POLARITY,PHASE_VL_GPIO_PIN,PHASE_VL_GPIO_PORT,PHASE_VL_POLARITY,PHASE_WH_GPIO_PIN,PHASE_WH_GPIO_PORT,PHASE_WH_POLARITY,PHASE_WL_GPIO_PIN,PHASE_WL_GPIO_PORT,PHASE_WL_POLARITY,POTENTIOMETER_READING,PWM_FREQUENCY,PWM_TIMER_SELECTION,R_BRAKE_GPIO_PIN,R_BRAKE_GPIO_PORT,REGULATION_EXECUTION_RATE,RTOS,SINGLE_SHUNT,SINGLEDRIVE,SPD_DIFFERENTIAL_TERM_ENABLING,SPEED_SENSOR_SELECTION,START_STOP_BTN,STATE_OBSERVER_PLL,STM32G474RE,SW_DEADTIME_NS,TEMPERATURE_READING,TFDIFFERENTIAL_TERM_ENABLING,TRISE_NS,USART_RX_GPIO_PIN,USART_RX_GPIO_PORT,USART_SELECTION,USART_SELECTION_A,USART_SPEED,USART_TX_GPIO_PIN,USART_TX_GPIO_PORT,USE_3OPAMPS,USE_INTERNAL_OPAMP,UV_VOLTAGE_PROT_ENABLING,VBUS_ADC,VBUS_ADC_SAMPLING_TIME,VBUS_CHANNEL,VBUS_GPIO_PIN,VBUS_GPIO_PORT,WB_to_Mx_template_version,WB_to_Mx_version,WB_UI_CUTOFF_FREQUENCY,WB_UI_ENCODER_HAS_INDEX_PIN,WB_UI_FLUX_TARGET,WB_UI_FRICTION,WB_UI_INERTIA,WB_UI_MAGNETIC_STRUCTURE,WB_UI_MAX_CURRENT,WB_UI_MAX_NOMINAL_DC_VOLTAGE,WB_UI_MOTOR_DESCRIPTION,WB_UI_OCP_DISABLING_ENABLE,WB_UI_OCP_THRESHOLD,WB_UI_PW_BOARD_MAX_RATED_CURRENT,WB_UI_PW_BOARD_MAX_VOLTAGE,WB_UI_PW_BOARD_MIN_VOLTAGE,WB_UI_VPOL
+MotorControl.IPParameters=ADC_AHBPERIPH,ADC_CLOCK_WB_DIV,ADC_PERIPH,ADC_REFERENCE_VOLTAGE,BOARD,BUS_VOLTAGE_READING,CCMRAM_ENABLED,CLOCK_FREQUENCY,CLOCK_SOURCE,CPU_CLK_170_MHZ,CTLBOARD_NAME,CUBE_MX_VER,CURR_SAMPLING_TIME,CURRENT_READING_TOPOLOGY,DBG_MCU_LOAD_MEASURE,DEBUG_DAC_FUNCTIONALITY_EN,DISSIPATIVE_BRAKE_POLARITY,DRIVE_NUMBER,DRIVE_TYPE,DRIVES_NUMBER_SELECTION,EMERGENCY_STOP_GPIO_PIN,EMERGENCY_STOP_GPIO_PORT,ENCODER_AVAILABLE,ENCODER_PPR,EXT_CLK_8_MHZ,EXT_CLOCK_FREQUENCY,FEEDBACK_NET_FILTERING,HALL_SENSORS_AVAILABLE,HIGH_SIDE_IDLE_STATE,HW_COMPLEMENTED_LOW_SIDE,HW_DEAD_TIME_NS,HWV_CS,HWV_OCP,HWV_PWM,IPs,LOW_MEMORY_FOOTPRINT_REG,LOW_SIDE_IDLE_STATE,LOW_SIDE_SIGNALS_ENABLING,M1_AMPLIFICATION_GAIN,M1_ANGC,M1_AUXILIARY_SPEED_SENSOR,M1_BEMF_CONSISTENCY_GAIN,M1_BEMF_CONSISTENCY_TOL,M1_BOARD_MAX_CURRENT,M1_BUS_VOLTAGE_READING,M1_CONSTANT1_D,M1_CONSTANT1_Q,M1_CONSTANT2_QD,M1_CS_ADC_NUM,M1_CS_ADC_PHASE_SHARED,M1_CS_ADC_U,M1_CS_CHANNEL_U,M1_CURR_SAMPLING_TIME,M1_CURRENT_AMPLIFICATION_TOPO,M1_CURRENT_SENSING_TOPO,M1_DBG_OPEN_LOOP_ENABLE,M1_DC_CURRENT_RS_MEAS,M1_DEFAULT_CONTROL_MODE,M1_DEFAULT_FLUX_COMPONENT,M1_DEFAULT_TARGET_SPEED_RPM,M1_DEFAULT_TORQUE_COMPONENT,M1_DISCONTINUOUS_PWM,M1_DISSIPATIVE_BRAKE_POLARITY,M1_DP_TOPOLOGY,M1_DRIVE_TYPE,M1_ENABLE_SL_ALGO_FROM_PHASE,M1_ENCODER_PPR,M1_F1,M1_F2,M1_FEED_FORWARD_CURRENT_REG_ENABLING,M1_FLUX_WEAKENING_ENABLING,M1_FW_KI_GAIN,M1_FW_KIDIV,M1_FW_KP_GAIN,M1_FW_KPDIV,M1_FW_VOLTAGE_REF,M1_GAIN1,M1_GAIN2,M1_HALL_PHASE_SHIFT,M1_HALL_SENSORS_PLACEMENT,M1_HIGH_SIDE_IDLE_STATE,M1_HW_DEAD_TIME_NS,M1_ICL_ENABLED,M1_ID_DEMAG,M1_IQMAX,M1_LDLQ_RATIO,M1_LOW_SIDE_IDLE_STATE,M1_LOW_SIDE_SIGNALS_ENABLING,M1_LS,M1_MAX_APPLICATION_SPEED,M1_MAX_MODULATION_INDEX,M1_MIN_APPLICATION_SPEED,M1_MOTOR_MAX_SPEED_RPM,M1_MOTOR_NAME,M1_MOTOR_RATED_FLUX,M1_MOTOR_VOLTAGE_CONSTANT,M1_MTPA_ENABLING,M1_NB_CONSECUTIVE_TESTS,M1_NOMINAL_BUS_VOLTAGE_V,M1_NOMINAL_CURRENT,M1_OBS_MINIMUM_SPEED_RPM,M1_OCP_BKIN_FILTER,M1_OCP_BKIN_MODE,M1_OCP_BKIN_POLARITY,M1_OCP_DESTINATION,M1_OCP_TOPOLOGY,M1_OFST,M1_OV_VOLTAGE_PROT_ENABLING,M1_OVERMODULATION,M1_OVP_THRESHOLD_LOW,M1_PHASE1_DURATION,M1_PHASE1_FINAL_CURRENT,M1_PHASE1_FINAL_SPEED_RPM,M1_PHASE2_DURATION,M1_PHASE2_FINAL_CURRENT,M1_PHASE2_FINAL_SPEED_RPM,M1_PHASE3_DURATION,M1_PHASE3_FINAL_CURRENT,M1_PHASE3_FINAL_SPEED_RPM,M1_PHASE4_DURATION,M1_PHASE4_FINAL_CURRENT,M1_PHASE4_FINAL_SPEED_RPM,M1_PHASE5_DURATION,M1_PHASE5_FINAL_CURRENT,M1_PHASE5_FINAL_SPEED_RPM,M1_PID_FLUX_KD_DEFAULT,M1_PID_FLUX_KI_DEFAULT,M1_PID_FLUX_KP_DEFAULT,M1_PID_SPEED_KD_DEFAULT,M1_PID_SPEED_KI_DEFAULT,M1_PID_SPEED_KP_DEFAULT,M1_PID_TORQUE_KD_DEFAULT,M1_PID_TORQUE_KI_DEFAULT,M1_PID_TORQUE_KP_DEFAULT,M1_PLL_KI_GAIN,M1_PLL_KP_GAIN,M1_POLE_PAIR_NUM,M1_POSITION_CTRL_ENABLING,M1_POTENTIOMETER_ENABLE,M1_POWERBOARD_NAME,M1_PWM_CHARGE_BOOT_CAP_DUTY_CYCLES,M1_PWM_CHARGE_BOOT_CAP_MS,M1_PWM_DRIVER_PN,M1_PWM_FREQUENCY,M1_PWM_TIMER_BRK_IRQ,M1_PWM_TIMER_SELECTION,M1_PWM_TIMER_UP_IRQ,M1_REGULATION_EXECUTION_RATE,M1_RS,M1_RSHUNT,M1_SEGDIV,M1_SHARED_SIGNAL_ENABLE,M1_SP_KDDIV,M1_SP_KIDIV,M1_SP_KPDIV,M1_SPD_DIFFERENTIAL_TERM_ENABLING,M1_SPEED_BAND_LOWER_LIMIT,M1_SPEED_BAND_UPPER_LIMIT,M1_SPEED_FEEDBACK_CHECK,M1_SPEED_LOOP_FREQUENCY_HZ,M1_SPEED_SENSOR,M1_SS_MEAS_ERRORS_BEFORE_FAULTS,M1_STARTING_ANGLE_DEG,M1_STO_FIFO_DEPTH_01HZ,M1_STO_FIFO_DEPTH_DPP,M1_SW_DEADTIME_NS,M1_TEMPERATURE_READING,M1_TF_KDDIV,M1_TF_KIDIV,M1_TF_KPDIV,M1_TRISE_NS,M1_TRANSITION_DURATION,M1_USE_INTERNAL_OPAMP,M1_UV_VOLTAGE_PROT_ENABLING,M1_VARIANCE_THRESHOLD,M1_VBUS_ADC,M1_VBUS_ADC_SAMPLING_TIME,M1_VBUS_CHANNEL,M1_VBUS_PARTITIONING_FACTOR,MAX_READABLE_CURRENT,MC_WORKBENCH_VERSION,MCP_ASPEP_OVER_UART,MCP_ASYNC_EN,MCP_ASYNC_OVER_ASPEP_EN,MCP_ASYNC_OVER_UART_A_EN,MCP_DMA_RX_UART_A,MCP_DMA_TX_UART_A,MCP_DMACH_RX_UART_A,MCP_DMACH_TX_UART_A,MCP_EN,MCP_IRQ_HANDLER_DMA_RX_UART_A,MCP_IRQ_HANDLER_UART_A,MCP_OVER_ASPEP_EN,MCP_OVER_STLNK_EN,MCP_OVER_UART_A_EN,MCP_OVER_UART_B_EN,MCP_RX_SYNC_PAYLOAD_MAX,MCP_TX_SYNC_PAYLOAD_MAX,MCU,MCU_FAMILY,MCU_LINE,MCU_NAME,MCU_PACKAGE,MCU_TYPE,MCU_USERNAME,MOTOR_PROFILER,MOTOR_TYPE,OV_VOLTAGE_PROT_ENABLING,PHASE_CURRENTS_ADC,PHASE_CURRENTS_CHANNEL,PHASE_CURRENTS_GPIO_PIN,PHASE_CURRENTS_GPIO_PORT,PHASE_UH_GPIO_PIN,PHASE_UH_GPIO_PORT,PHASE_UH_POLARITY,PHASE_UL_GPIO_PIN,PHASE_UL_GPIO_PORT,PHASE_UL_POLARITY,PHASE_VH_GPIO_PIN,PHASE_VH_GPIO_PORT,PHASE_VH_POLARITY,PHASE_VL_GPIO_PIN,PHASE_VL_GPIO_PORT,PHASE_VL_POLARITY,PHASE_WH_GPIO_PIN,PHASE_WH_GPIO_PORT,PHASE_WH_POLARITY,PHASE_WL_GPIO_PIN,PHASE_WL_GPIO_PORT,PHASE_WL_POLARITY,POTENTIOMETER_READING,PWM_FREQUENCY,PWM_TIMER_SELECTION,R_BRAKE_GPIO_PIN,R_BRAKE_GPIO_PORT,REGULATION_EXECUTION_RATE,RTOS,SINGLE_SHUNT,SINGLEDRIVE,SPD_DIFFERENTIAL_TERM_ENABLING,SPEED_SENSOR_SELECTION,START_STOP_BTN,STATE_OBSERVER_PLL,STM32G474RE,SW_DEADTIME_NS,TEMPERATURE_READING,TFDIFFERENTIAL_TERM_ENABLING,TRISE_NS,USART_RX_GPIO_PIN,USART_RX_GPIO_PORT,USART_SELECTION,USART_SELECTION_A,USART_SPEED,USART_TX_GPIO_PIN,USART_TX_GPIO_PORT,USE_3OPAMPS,USE_INTERNAL_OPAMP,UV_VOLTAGE_PROT_ENABLING,VBUS_ADC,VBUS_ADC_SAMPLING_TIME,VBUS_CHANNEL,VBUS_GPIO_PIN,VBUS_GPIO_PORT,WB_to_Mx_template_version,WB_to_Mx_version,WB_UI_CUTOFF_FREQUENCY,WB_UI_ENCODER_HAS_INDEX_PIN,WB_UI_FLUX_TARGET,WB_UI_FRICTION,WB_UI_INERTIA,WB_UI_MAGNETIC_STRUCTURE,WB_UI_MAX_CURRENT,WB_UI_MAX_NOMINAL_DC_VOLTAGE,WB_UI_MOTOR_DESCRIPTION,WB_UI_OCP_DISABLING_ENABLE,WB_UI_OCP_THRESHOLD,WB_UI_PW_BOARD_MAX_RATED_CURRENT,WB_UI_PW_BOARD_MAX_VOLTAGE,WB_UI_PW_BOARD_MIN_VOLTAGE,WB_UI_VPOL,M1_TNOISE_NS
 MotorControl.IPs=CORDIC,SYS,NVIC,RCC,MotorControl,TIM1,ADC1,USART1,DMA
 MotorControl.LOW_MEMORY_FOOTPRINT_REG=false
 MotorControl.LOW_SIDE_IDLE_STATE=false
 MotorControl.LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
-MotorControl.M1_AMPLIFICATION_GAIN=4.26
-MotorControl.M1_ANGC={-715,-2153,-3584,-4984,-6367,-7705,-9010,-10261}
+MotorControl.M1_AMPLIFICATION_GAIN=2.941176471
+MotorControl.M1_ANGC={-773,-2329,-3874,-5379,-6858,-8285,-9684,-11001}
 MotorControl.M1_AUXILIARY_SPEED_SENSOR=NONE
 MotorControl.M1_BEMF_CONSISTENCY_GAIN=64
 MotorControl.M1_BEMF_CONSISTENCY_TOL=64
@@ -333,22 +333,22 @@ MotorControl.M1_FW_KI_GAIN=5000
 MotorControl.M1_FW_KPDIV=32768
 MotorControl.M1_FW_KP_GAIN=3000
 MotorControl.M1_FW_VOLTAGE_REF=985
-MotorControl.M1_GAIN1=-24514
-MotorControl.M1_GAIN2=9602
+MotorControl.M1_GAIN1=-24494
+MotorControl.M1_GAIN2=24912
 MotorControl.M1_HALL_PHASE_SHIFT=300
 MotorControl.M1_HALL_SENSORS_PLACEMENT=DEGREES_120
 MotorControl.M1_HIGH_SIDE_IDLE_STATE=false
 MotorControl.M1_HW_DEAD_TIME_NS=8000
 MotorControl.M1_ICL_ENABLED=false
-MotorControl.M1_ID_DEMAG=-20.0
-MotorControl.M1_IQMAX=19.714317974313154
+MotorControl.M1_ID_DEMAG=-25
+MotorControl.M1_IQMAX=24.58797507430251
 MotorControl.M1_LDLQ_RATIO=0.700
 MotorControl.M1_LOW_SIDE_IDLE_STATE=false
 MotorControl.M1_LOW_SIDE_SIGNALS_ENABLING=LS_PWM_TIMER
 MotorControl.M1_LS=0.00466
 MotorControl.M1_MAX_APPLICATION_SPEED=5400
-MotorControl.M1_MAX_MODULATION_INDEX=81
-MotorControl.M1_MIN_APPLICATION_SPEED=900
+MotorControl.M1_MAX_MODULATION_INDEX=100
+MotorControl.M1_MIN_APPLICATION_SPEED=0
 MotorControl.M1_MOTOR_MAX_SPEED_RPM=5400
 MotorControl.M1_MOTOR_NAME=BTH420SDPC9EQA
 MotorControl.M1_MOTOR_RATED_FLUX=1.055730079
@@ -363,7 +363,7 @@ MotorControl.M1_OCP_BKIN_MODE=EXT_MODE
 MotorControl.M1_OCP_BKIN_POLARITY=EMSTOP_ACTIVE_LOW
 MotorControl.M1_OCP_DESTINATION=TIM_BKIN
 MotorControl.M1_OCP_TOPOLOGY=EXTERNAL
-MotorControl.M1_OFST={0,152,457,903,1491,2202,3035,3966}
+MotorControl.M1_OFST={0,144,432,853,1404,2069,2851,3709}
 MotorControl.M1_OVERMODULATION=false
 MotorControl.M1_OVP_THRESHOLD_LOW=400
 MotorControl.M1_OV_VOLTAGE_PROT_ENABLING=false
@@ -383,16 +383,16 @@ MotorControl.M1_PHASE5_DURATION=20000
 MotorControl.M1_PHASE5_FINAL_CURRENT=5
 MotorControl.M1_PHASE5_FINAL_SPEED_RPM=1300
 MotorControl.M1_PID_FLUX_KD_DEFAULT=100
-MotorControl.M1_PID_FLUX_KI_DEFAULT=66
-MotorControl.M1_PID_FLUX_KP_DEFAULT=2264
+MotorControl.M1_PID_FLUX_KI_DEFAULT=63
+MotorControl.M1_PID_FLUX_KP_DEFAULT=1703
 MotorControl.M1_PID_SPEED_KD_DEFAULT=0
-MotorControl.M1_PID_SPEED_KI_DEFAULT=1270
-MotorControl.M1_PID_SPEED_KP_DEFAULT=2481
+MotorControl.M1_PID_SPEED_KI_DEFAULT=811
+MotorControl.M1_PID_SPEED_KP_DEFAULT=3166
 MotorControl.M1_PID_TORQUE_KD_DEFAULT=100
-MotorControl.M1_PID_TORQUE_KI_DEFAULT=66
-MotorControl.M1_PID_TORQUE_KP_DEFAULT=3234
-MotorControl.M1_PLL_KI_GAIN=45
-MotorControl.M1_PLL_KP_GAIN=638
+MotorControl.M1_PID_TORQUE_KI_DEFAULT=63
+MotorControl.M1_PID_TORQUE_KP_DEFAULT=2361
+MotorControl.M1_PLL_KI_GAIN=64
+MotorControl.M1_PLL_KP_GAIN=718
 MotorControl.M1_POLE_PAIR_NUM=2
 MotorControl.M1_POSITION_CTRL_ENABLING=false
 MotorControl.M1_POTENTIOMETER_ENABLE=false
@@ -407,7 +407,7 @@ MotorControl.M1_PWM_TIMER_UP_IRQ=TIM1_UP_TIM16
 MotorControl.M1_REGULATION_EXECUTION_RATE=1
 MotorControl.M1_RS=0.25
 MotorControl.M1_RSHUNT=0.01175
-MotorControl.M1_SEGDIV=3483
+MotorControl.M1_SEGDIV=3052
 MotorControl.M1_SHARED_SIGNAL_ENABLE=false
 MotorControl.M1_SPD_DIFFERENTIAL_TERM_ENABLING=false
 MotorControl.M1_SPEED_BAND_LOWER_LIMIT=16
@@ -417,17 +417,17 @@ MotorControl.M1_SPEED_LOOP_FREQUENCY_HZ=500
 MotorControl.M1_SPEED_SENSOR=STO_PLL
 MotorControl.M1_SP_KDDIV=16
 MotorControl.M1_SP_KIDIV=16384
-MotorControl.M1_SP_KPDIV=64
+MotorControl.M1_SP_KPDIV=128
 MotorControl.M1_SS_MEAS_ERRORS_BEFORE_FAULTS=100
 MotorControl.M1_STARTING_ANGLE_DEG=0
 MotorControl.M1_STO_FIFO_DEPTH_01HZ=64
 MotorControl.M1_STO_FIFO_DEPTH_DPP=64
-MotorControl.M1_SW_DEADTIME_NS=1000
+MotorControl.M1_SW_DEADTIME_NS=4000
 MotorControl.M1_TEMPERATURE_READING=false
 MotorControl.M1_TF_KDDIV=8192
 MotorControl.M1_TF_KIDIV=16384
 MotorControl.M1_TF_KPDIV=4096
-MotorControl.M1_TNOISE_NS=4500
+MotorControl.M1_TNOISE_NS=2500
 MotorControl.M1_TRANSITION_DURATION=0
 MotorControl.M1_TRISE_NS=2500
 MotorControl.M1_USE_INTERNAL_OPAMP=false
@@ -527,12 +527,12 @@ MotorControl.WB_UI_FLUX_TARGET=0
 MotorControl.WB_UI_FRICTION=666
 MotorControl.WB_UI_INERTIA=666
 MotorControl.WB_UI_MAGNETIC_STRUCTURE=I-PMSM
-MotorControl.WB_UI_MAX_CURRENT=20.0
+MotorControl.WB_UI_MAX_CURRENT=25.0
 MotorControl.WB_UI_MAX_NOMINAL_DC_VOLTAGE=400
 MotorControl.WB_UI_MOTOR_DESCRIPTION=Motor high voltage
 MotorControl.WB_UI_OCP_DISABLING_ENABLE=false
 MotorControl.WB_UI_OCP_THRESHOLD=24
-MotorControl.WB_UI_PW_BOARD_MAX_RATED_CURRENT=20.0
+MotorControl.WB_UI_PW_BOARD_MAX_RATED_CURRENT=25.0
 MotorControl.WB_UI_PW_BOARD_MAX_VOLTAGE=400
 MotorControl.WB_UI_PW_BOARD_MIN_VOLTAGE=18
 MotorControl.WB_UI_VPOL=1.65
@@ -638,13 +638,17 @@ PB2.GPIOParameters=GPIO_Label
 PB2.GPIO_Label=PFC_EN
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=USER_TX
 PB3.Mode=Asynchronous
 PB3.Signal=USART2_TX
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=USER_RX
 PB4.Locked=true
 PB4.Mode=Asynchronous
 PB4.Signal=USART2_RX
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB6.GPIO_Label=UART_TX
+PB6.GPIO_Label=DEBUG_TX
 PB6.GPIO_Mode=GPIO_MODE_AF_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -652,7 +656,7 @@ PB6.Locked=true
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
 PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB7.GPIO_Label=UART_RX
+PB7.GPIO_Label=DEBUG_RX
 PB7.GPIO_Mode=GPIO_MODE_AF_PP
 PB7.GPIO_PuPd=GPIO_NOPULL
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
@@ -718,7 +722,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ATS230704_R1.ioc
 ProjectManager.ProjectName=ATS230704_R1
 ProjectManager.ProjectStructure=
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=UART
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
